[project]
name = "yusu"
version = "0.0.1"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires = 
    pyyaml


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yusu-run = yusu.steering:main
